polyphone (2.6) unstable; urgency=low

  * (new) RPN messages can change the tuning
  * (improvement) faster sound engine
  * (fix) correct key ranges when saving as sfz
  * (fix) tab widths of the GUI

 -- Davy Triponney <davy.triponney@gmail.com>  Mon, 1 Dec 2025 09:14:36 +0100


polyphone (2.5) UNRELEASED; urgency=low

  * (new) "play with" feature, for playing several instruments or presets
  * (new) sample tool for adding a cross-fade around loop points
  * (new) tool for creating samples that are a merge of all instruments / samples inside a preset
  * (new) sfz support of trigger "release"
  * (new) mp3, aiff and snd sample formats can be imported
  * (new) bank / preset selection with MIDI signals (CC0 / program change)
  * (improvement) the autoloop tool is more accurate and is not based on the existing loop
  * (improvement) the state of the keyboard and recorder windows is restored
  * (improvement) the sf2 / sf3 export can now create one file per preset
  * (improvement) sound engine still playing faster
  * (improvement) a sound engine overflow is not stopping all voices anymore
  * (improvement) management of multiple tabs
  * (fix) divisions are correctly enlighted at the preset level when playing
  * (fix) the treeview sort is updated after a key range change
  * (fix) next available bank / preset correctly computed
  * (fix) no default modulators at the sample level
  * (fix) sfz attenuation export
  * (fix) finding root keys of very short loops

 -- Davy Triponney <davy.triponney@gmail.com>  Sun, 22 Dec 2024 09:14:36 +0100
  

polyphone (2.4) UNRELEASED; urgency=low

  * (new) player mode for using Polyphone as a synthesizer
  * (new) Catalan and Polish translations
  * (new) sfz opcodes amp_veltrack, fil_veltrack, fil_keytrack, fil_keycenter can be imported / exported
  * (new) support of relative MIDI CC values
  * (new) sample mode "release"
  * (new) navigation between tabs with Ctrl+Tab or Ctrl+PageDown and Ctrl+Shift+Tab or Ctrl+PageUp